#------------------------------------------------------------------------------
# CMakeLists.txt
# Module : G4hadronic_preequ
# Package: Geant4.src.G4processes.G4hadronic.G4hadronic_models.G4hadronic_preequ
#
# Intermediate level CMakeLists.txt - just process subdirectories
#
# Generated on : 24/9/2010
#
# $Id: CMakeLists.txt 66241 2012-12-13 18:34:42Z gunter $
#
#------------------------------------------------------------------------------

add_subdirectory(exciton_model)

